--- a/css/main.css
+++ b/css/main.css
@@ -85,3 +85,20 @@ body {
     margin-bottom: 10px;
     margin-top: 10px;
 }
+
+@keyframes loader {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+#Loader {
+    animation: forwards loader 3s;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
